# narcissus

./: .gitmodules  Authors  CMakeLists.txt  README.md  main.cpp  test.json
examples/: pythonize_example.cpp  serialization_example.cpp
include/narcissus/: ORM.h  Pythonize.h  lightweight_any.h  template_typing.h
include/narcissus/gsm/: gsm.h
include/narcissus/reflection/: Class.h  Reflection.h  ReflectionManager.h  ReflectionManagerData.h  flatten_type_to_enum.h  type_cases.h
include/narcissus/reflection/fields/: ArrayField.h  DynamicArrayField.h  EnumField.h  Field.h  PtrField.h  VariantField.h
src/narcissus/: ORM.cpp  Pythonize.cpp  lightweight_any.cpp
src/narcissus/reflection/: Class.cpp  Reflection.cpp  ReflectionManager.cpp  ReflectionManagerData.cpp
src/narcissus/reflection/fields/: ArrayField.cpp  DynamicArrayField.cpp  EnumField.cpp  Field.cpp  PtrField.cpp  VariantField.cpp
tests/: basic_tests.cpp
